[package]
name = "rust-cat-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"


[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.17"
backtrace = "0.3"
serde = { version = "1.0.160", features = ["derive"] }
anyhow = "1.0.69"
toml = "0.8.8"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0.38"
