[package]
name = "rust-cat-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"


[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.17"
backtrace = "0.3"
anyhow = "1.0.69"
toml = "0.8.8"
thiserror = "1.0.38"
derive_more = "0.99"

# -- Server
tokio = { version = "1.21", features = ["rt-multi-thread", "macros"] }
axum = {version = "0.7", features = ["macros"]}

# -- SQL 
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"]}
sea-query = {version = "0.30", features = ["attr"]}
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time"] }

# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = {version = "3", features = ["time_0_3"]}
